package isep.model;

public class Client extends Entity {

    public Client(String id, double latitude, double longitude, String localizationId) {
        super(id, latitude, longitude, localizationId);
    }
    
}
