@startuml DM

skinparam classAttributeIconSize 0
hide methods

class Entity {
  - latitude
  - longitude
  - localization
}

class Client {}
class Enterprise {
  - isHub
}
class Producer {}

Entity <|-- Client
Entity <|-- Enterprise
Entity <|-- Producer

class DistributionNetwork {}

DistributionNetwork "1" o-- "*" Entity
@enduml
